src/main/java/org/example/error/enums/ErrorLevel.java
package org.example.error.enums;

public enum ErrorLevel {

	LEXICAL,
	SYNTACTICAL,
	SEMANTIC

}
